--- a/.github/workflows/chaohua_dosign.yaml
+++ b/.github/workflows/chaohua_dosign.yaml
@@ -9,8 +9,8 @@ name: ch_dosing
 #
 on:
   workflow_dispatch:  # 允许手动触发
-  schedule: # 每天下午12点执行 时差为 +8
-    - cron: '0 04 * * *'
+  # schedule: # 每天下午12点执行 时差为 +8
+  #   - cron: '0 04 * * *'
 
 
 jobs:
